# cacheopt

./: .dockerignore  .gitignore  Dockerfile.api  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
benchmarks/results/: summary.json
docker/: api-entrypoint.sh
docs/: ARCHITECTURE.md
frontend/: Dockerfile  index.html  nginx.conf
frontend/src/: App.css  App.tsx  Charts.css  Charts.tsx  SignalPath.css  SignalPath.tsx  api.ts  index.css
scripts/: generate_dataset.py  make_chart.py  query_templates.py  run_benchmark.py
src/cacheopt/: __init__.py  config.py  engine.py  fingerprint.py  invalidation.py  stats.py
src/cacheopt/api/: app.py
src/cacheopt/cache/: memory_buffer.py  redis_cache.py  redis_client.py  tiered_cache.py
src/cacheopt/optimizer/: cost_model.py  planner.py  rewriter.py
src/cacheopt/storage/: duckdb_backend.py
tests/: conftest.py  test_cache_tiers.py  test_cost_model.py  test_end_to_end.py  test_fingerprint.py  test_invalidation.py  test_rewriter.py
